Update protobuf, work on client/server initial communication
Work on ClientSnapshot